--- a/carrito.html
+++ b/carrito.html
@@ -4,31 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TecnologyCA</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" href="carrito.css" type="text/css">
 
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="./index.html"><img src="./img/LOGOEMPRESA.png" id="logo" alt="logo"></a>
-            <div>
 
-                <a href="./carrito.html"><img src="./img/icono-shopping-cart.jpg" id="logocarrito" alt="carrito"><span id="C-carrito">0</span></a>
-            </div>
+<body  class=" bg-light text-white">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+        <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+            <a href="./index.html"><img src="./img/LOGOEMPRESA.png" id="logo" alt="logo"></a>           
+            <a href="./carrito.html"><img src="./img/icono-shopping-cart.jpg" id="logocarrito"  alt="carrito"><span id="C-carrito" class="text-light ms-1">0</span></a>
+           
         </nav>
+   
+    <div class="grid gap-0 row-gap-3 mt-5">
         
-    </header>
-    <main>
-        <p id="vacio">UPS! tu carrito esta vacio</p>
+        <p id="vacio" class="text-black" >UPS! tu carrito esta vacio</p>
+        <div class="p-2 g-col-6">   
         <section id="productos-container"></section>
+        </div>
+        <div class="p-2 g-col-6">  
         <section id="total">
-            <p>Total unidades: <span id="unidades">0</span></p>
-            <p> Total precio: <span id="precio">0</span></p>
-            <button>Comprar</button>
-        </section>    
-    </main>
-    <footer>Derechos reservados - TecnologyCA</footer>
+            <p class="text-black">Total unidades:<span id="unidades">0</span></p>
+            <p class="text-black"> Total precio: $ <span id="precio">0</span></p>
+            <button type="button" class="btn btn-primary">Comprar</button>
+        </section>  
+    </div>  
+    </div>  
+    <footer class="bg-dark text-light">Derechos reservados - TecnologyCA</footer>
 </body>
 <script src="./js/LocalStorage.js" defer></script>
 <script src="./js/carrito.js" defer></script>
